<resources>
    <string name="app_name">WildFire</string>
    <string name="register_new_account">Register new account</string>
    <string name="register_display_name">Display Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_register">Create Account</string>
    <string name="register_failed">REGISTRATION FAILED</string>
    <string name="register_success">REGISTRATION SUCCESSFUL</string>
    <string name="text_logout">Log Out</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="register_title">Create an Account</string>
    <string name="main_title">WildFire</string>
    <string name="login_to_account">Login To Account</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="register_log_in">Log In</string>
    <string name="login_title">Log In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_change_dp">Change Image</string>
    <string name="settings_change_status">Change Status</string>
    <string name="status_title">Change Status</string>
    <string name="allusers_title">All Users</string>

    <string name="title_activity_view_fullscreen_video">ViewFullscreenVideo</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
