<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.makrandpawar.chatla.LoginActivity">

    <include layout="@layout/app_bar_layout" android:id="@+id/login_tool_bar"/>

    <TextView
        android:id="@+id/login_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/login_tool_bar"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:text="@string/login_to_your_account"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_textView1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_txt_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login_txt_password"
        android:layout_below="@+id/login_txt_password"
        android:layout_marginTop="23dp"
        android:backgroundTint="@color/colorAccent"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/register_log_in"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/loginactivity_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:text="Forgot Password ?"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="italic" />

</RelativeLayout>
